@@ -42,14 +42,17 @@ import org.jaxen.VariableContext;
  */
 @SuppressWarnings("unused")
 public class DocumentFactory implements Serializable {
-    private static SingletonStrategy<DocumentFactory> singleton = null;
+    private static final long serialVersionUID = 1L;
+
+	private static SingletonStrategy<DocumentFactory> singleton = null;
 
     protected transient QNameCache cache;
 
     /** Default namespace prefix → URI mappings for XPath expressions to use */
     private Map<String, String> xpathNamespaceURIs;
 
-    private static SingletonStrategy<DocumentFactory> createSingleton() {
+    @SuppressWarnings("unchecked")
+	private static SingletonStrategy<DocumentFactory> createSingleton() {
         SingletonStrategy<DocumentFactory> result;
         
         String documentFactoryClassName;
@@ -64,8 +67,8 @@ public class DocumentFactory implements Serializable {
             String singletonClass = System.getProperty(
                     "org.dom4j.DocumentFactory.singleton.strategy",
                     "org.dom4j.util.SimpleSingleton");
-            Class<SingletonStrategy> clazz = (Class<SingletonStrategy>) Class.forName(singletonClass);
-            result = clazz.newInstance();
+            Class<SingletonStrategy<DocumentFactory>> clazz = (Class<SingletonStrategy<DocumentFactory>>) Class.forName(singletonClass);
+            result = clazz.getDeclaredConstructor().newInstance();
         } catch (Exception e) {
             result = new SimpleSingleton<DocumentFactory>();
         }
@@ -359,7 +362,8 @@ public class DocumentFactory implements Serializable {
      * 
      * @return a new singleton instance.
      */
-    protected static DocumentFactory createSingleton(String className) {
+    @SuppressWarnings("unchecked")
+	protected static DocumentFactory createSingleton(String className) {
         // let's try and class load an implementation?
         try {
             // I'll use the current class loader
@@ -367,7 +371,7 @@ public class DocumentFactory implements Serializable {
             Class<DocumentFactory> theClass = (Class<DocumentFactory>) Class.forName(className, true,
                     DocumentFactory.class.getClassLoader());
 
-            return theClass.newInstance();
+            return theClass.getDeclaredConstructor().newInstance();
         } catch (Throwable e) {
             System.out.println("WARNING: Cannot load DocumentFactory: "
                     + className);
